调整gulp-base64的maxImageSize 值

--- a/code/gulp-base64/src/app.css
+++ b/code/gulp-base64/src/app.css
@@ -1,5 +1,3 @@
 body {
-    background-image: url("/images/3.png");
-    background-image: url("http://stefanimhoff.de/assets/images/artikel/gulp-tutorial-7-acd26933d7.jpg");
-    /*background-image: url("http://www.75team.com/static/upload/201603/logo.png");*/
+    background-image: url('/images/anytao.png');
 }
