--- a/code/warehouseReport/styles/app.css
+++ b/code/warehouseReport/styles/app.css
@@ -1,9 +1,44 @@
-#touchs{
-margin: 10px;width: 100px;height: auto;min-height: 100px;
-border:1px solid #c2ddb6;border-radius: 2px;background:blue;
+html,
+body,
+div {
+    margin: 0 auto;
+    padding: 0 auto;
 }
-#touchs li {list-style: none;}
-.clear{
-margin-left: 10px;display:inline-block;height: 24px;width: 40px;color:#fff;
-font-size: 14px;line-height: 24px;background: black;text-align: center;
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+
+/*#main {
+    margin-top: 20px;
+    /*width: 100%;
+    height: 100%;
+}*/
+
+/*.list {
+    display: inline-block;
+    width: 33%;
+    ;
+    height: 400px;
+    background-color: red;
+}*/
+
+.box {
+    width: 50%;
+    padding: 20px;
+    margin: 20px auto;
+    background-color: #f0f3f9;
+    text-align: justify;
+}
+
+.list {
+    width: 30%;
+    height:100%;
+    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    vertical-align: top;
 }
