--- a/code/warehouseReport/styles/app.css
+++ b/code/warehouseReport/styles/app.css
@@ -11,12 +11,10 @@ body {
     height: 100%;
 }
 
-
-/*#main {
-    margin-top: 20px;
-    /*width: 100%;
-    height: 100%;
-}*/
+.report{
+    margin-top:5%;
+    height:100%;
+}
 
 /*.list {
     display: inline-block;
