--- a/code/warehouseReport/styles/app.css
+++ b/code/warehouseReport/styles/app.css
@@ -12,9 +12,8 @@ body {
 }
 
 .report{
-    margin-top:5%;
-    /*height:100%;*/
-    height:90vh;
+    margin-top:10px;
+    height:100%;
 }
 
 /*.list {
@@ -40,4 +39,11 @@ body {
     padding-bottom: 20px;
     text-align: center;
     vertical-align: top;
+}
+
+#title{
+    text-align: center;
+    font-size:20px;
+    color:orange;
+    font-weight: bold;
 }
