--- a/code/ztree/demo.css
+++ b/code/ztree/demo.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+/*html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
 	margin: 0;padding: 0;border: 0;outline: 0;font-weight: inherit;font-style: inherit;font-size: 100%;font-family: inherit;vertical-align: baseline;}
 body {color: #2f332a;font: 15px/21px Arial, Helvetica, simsun, sans-serif;background: #f0f6e4 \9;}
 h1, h2, h3, h4, h5, h6 {color: #2f332a;font-weight: bold;font-family: Helvetica, Arial, sans-serif;padding-bottom: 5px;}
@@ -15,14 +15,14 @@ code {color: #2f332a;}
 .highlight_green {color:#A7F43D;}
 li {list-style: circle;font-size: 12px;}
 li.title {list-style: none;}
-ul.list {margin-left: 17px;}
+ul.list {margin-left: 17px;}*/
 
 div.content_wrap {width: 600px;height:380px;}
 div.content_wrap div.left{float: left;width: 250px;}
 div.content_wrap div.right{float: right;width: 340px;}
-div.zTreeDemoBackground {width:250px;height:362px;text-align:left;}
+div.zTreeDemoBackground {height:362px;text-align:left;}
 
-ul.ztree {margin-top: 10px;border: 1px solid #aaa;background: #f0f6e4;height:360px;overflow-y:scroll;overflow-x:auto;}
+ul.ztree {margin-top: 10px;border: 1px solid #aaa;background: #f0f6e4;width:220px;height:360px;overflow-y:scroll;overflow-x:auto;}
 ul.log {border: 1px solid #617775;background: #f0f6e4;width:300px;height:170px;overflow: hidden;}
 ul.log.small {height:45px;}
 ul.log li {color: #666666;list-style: none;padding-left: 10px;}
@@ -32,3 +32,17 @@ ul.log li.dark {background-color: #E3E3E3;}
 div.ruler {height:20px; width:220px; background-color:#f0f6e4;border: 1px solid #333; margin-bottom: 5px; cursor: pointer}
 div.ruler div.cursor {height:20px; width:30px; background-color:#3C6E31; color:white; text-align: right; padding-right: 5px; cursor: pointer}
 #menuTree{background: #af0000;}
+
+.input-select{
+    border: 1px solid #D7D7D7;
+    height: 29px;
+    border-radius: 4px;
+    line-height: 26px;
+    font-size: 12px;
+    color: #999999;
+    text-indent: 10px;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background: #fff url(ioc5.png) no-repeat right center;
+}
