--- a/code/autocomplete-table/tautocomplete.css
+++ b/code/autocomplete-table/tautocomplete.css
@@ -113,7 +113,7 @@
 }
 
 .loading {
-    background: url(img/loading.gif) no-repeat right center;
+    background: url(img/ui-anim_basic_16x16.gif) no-repeat right center;
 }
 
 .highlight {
